# MCP-MySQL-Ops

./: .env.example  .gitignore  Dockerfile  Dockerfile.MCP-Server  Dockerfile.MCPO-Proxy  Dockerfile.smithery.ai  README.md  SECURITY.md  build-mcp-server-docker-image.sh  build-mcpo-server-docker-image.sh  docker-compose.custom-db.yml  docker-compose.yml  mcp-config.json.http  mcp-config.json.stdio  pyproject.toml  run-mcp-inspector-local.sh  run-mcp-inspector-pypi.sh  smithery.yaml
.github/: CONTRIBUTING.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: pypi-publish.yml  test.yml
scripts/: create-test-data.sh  create-test-data.sql  mcp-server-docker-cmd.sh  run-mcp-inspector-local.sh
src/mcp_mysql_ops/: functions.py  mcp_main.py  prompt_template.md  version_compat.py
tests/: conftest.py  test_tools_integration.py  test_version_compat.py
tests/docker/: docker-compose.test.yml  init-test-db.sql
