[project]
name = "mcp-mysql-ops"
dynamic = ["version"]
description = "MCP server for MySQL database operations and monitoring"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "JungJungIn", email = "call518@gmail.com" }]
dependencies = [
    "fastmcp>=2.12.3",
    "aiomysql>=0.2.0",
    "PyMySQL>=1.1.0",
    "mcp>=1.13.0",
    "setuptools-scm>=10.0.5",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
mcp-mysql-ops = "mcp_mysql_ops.mcp_main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

